--- a/05/index.html
+++ b/05/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
-	<link rel="stylesheet" href="">
+	<title>Titulo</title>
+	<link rel="stylesheet" href="http://www.google.com">
 </head>
-	<h1> Título 1 </h1>
+	
 <body>
-
+	<h1> Título 1 </h1>
 </body>
 </html>
