--- a/07/index.html
+++ b/07/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-	<title></title>
+	<title>Parrafo</title>
 </head>
 <body>
 
-	<p Párrafo1> </p>
+	<p> Párrafo1> </p>
 
 </body>
 </html>
