--- a/08/index.html
+++ b/08/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
 	<meta charset="utf-8">
-	<title></title>
-	<p> hola </p>
+	<title>Hola</title>
+	
 </head>
 <body>
-
+	<p> hola </p>
 </body>
 </html>
