--- a/09/index.html
+++ b/09/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
 	<meta charset="utf-8">
-	<title></title>
-	<link rel="stylesheet" href="">
+	<title>Index</title>
+	<link rel="stylesheet" href="Index">
 </head>
 <body>
 
-	<a href="Soy un link"> www.google.cl </a>
+	<a href="www.google.cl">Soy un link"</a>
 
 </body>
 </html>
