--- a/12/index.html
+++ b/12/index.html
@@ -1,17 +1,16 @@
  <!DOCTYPE html>
- <html>
+ <html lang="es">
  <head>
  	<meta charset="utf-8">
- 	<title></title>
+ 	<title>Lorem</title>
  </head>
  <body>
 
 	 <h1> Hola </h1>
-		Lorem ipsum dolor sit amet, consectetur adipisicing Tempore praesentium dolorum incidunt vitae deserunt quam exercitationem assumenda hic corrupti beatae numquam, labore explicabo quisquam ratione optio necessitatibus impedit porro vero!
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing Tempore praesentium dolorum incidunt vitae deserunt quam exercitationem assumenda hic corrupti beatae numquam, labore explicabo quisquam ratione optio necessitatibus impedit porro vero!
 	</p>
 
-	<p>
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat quisquam unde dicta nulla tempora! Ad, modi eveniet dicta necessitatibus aut distinctio minus tenetur hic, delectus, doloremsuscipit doloribus ab eius.
+	<p>	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat quisquam unde dicta nulla tempora! Ad, modi eveniet dicta necessitatibus aut distinctio minus tenetur hic, delectus, doloremsuscipit doloribus ab eius.
 	</p>
 
  </body>
