--- a/14/index.html
+++ b/14/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
-	<link rel="stylesheet" href="">
+	<title>Hola</title>
+	<link rel="stylesheet" href="http://www.google.com">
 </head>
 <body>
 
-<a href="www.desafiolatam.com">link a Desafío Latam!</a>
+	<a href="www.desafiolatam.com">link a Desafío Latam!</a>
+	<a href="wwww.google.cl"><img src="logo.png" alt=""></a>
 
 </body>
 </html>
