--- a/19/index.html
+++ b/19/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
     <meta charset="utf-8">
+    <title>lorem</title>
 </head>
 <body>
     <div style="color:yellow">
-        <p> Goooooood byeeeee !! </p>
+        <p style="color:red"> Goooooood byeeeee !! </p>
         <p> Holaaaa !!! </p>
     </div>
 </body>
