--- a/20/index.html
+++ b/20/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-    <head> Go Green </head>
+	<style type="text/css">
+		p{ 
+			color: green;
+		 }
+
+	</style>
+
+    <title> Go Green </title>
+
 </head>
 <body>
     <p> Hellowww </p>
