--- a/21/index.html
+++ b/21/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-	
-    <meta charset="utf-8">
+		<title>Lorem</title>
+	    <meta charset="utf-8">
+
 </head>
 <body>
     <div style="color:yellow">
-        <p> Goooooood byeeeee !! </p style="color:red">
+        <p style="color:red"> Goooooood byeeeee !! </p>
         <p> Holaaaa !!! </p>
     </div>
 </body>
