--- a/22/index.html
+++ b/22/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+	
 	<meta charset="utf-8">
-	<style "color:yellow">
+	<style type="text/css">
+		p {
+			color:yellow;
+		}
+		.red {color:red;
+			}
+
+	</style>
 </head>
 <body>
 	<div>
-		<p > Hellowww </p>
-		<p> Lorem ipsum dolor sit amet. </p>
+		<p> Hellowww </p>
+		<p class="red"> Lorem ipsum dolor sit amet. </p>
 	</div>
 </body>
 </html>
