--- a/23/index.html
+++ b/23/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
+	<title>lorem</title>
 	<meta charset="utf-8">
-	<style>
+	<style type="text/css">
 
-		<p> {
-			color:  green;
+		p {
+			color: green;
 		}
 	</style>
 </head>
