--- a/24/110000 p.html
+++ b/24/110000 p.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
+	<title>lorem</title>
 	<meta charset="utf-8">
-	<style>
+	<style type="text/css">
+
+		div {
+			background-color: yellow;
+		}
+
 		p {
 			color: red;
+		}
+
+		.pink {
+			color: #FF2B9F;
 		}
 	</style>
 </head>
 <body>
 	<div>
-		<p> Hellowww </p>
+		<p class="pink"> Hellowww </p>
 	</div>
 
 	<div>
