--- a/25/index.html
+++ b/25/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
-	<link rel="stylesheet" href="">
+	<title>lorem</title>
+	<link rel="stylesheet" href="a">
 </head>
 <body>
 
-	<img src="images/logo.png" alt="logo desafio latam" >
-	<img src="images/logo.png" alt="logo desafio latam" >
+	<img src="images/logo.png" alt="logo desafio latam" style= "height: 500px; width: 500px;">
+	<img src="images/logo.png" alt="logo desafio latam" style="height: 500px;">
 
 </body>
 </html>
